--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
               </p>
               <p>Welcome! My name is Preethi and I am a CS PhD student at UC Irvine working with Prof Sameer Singh. I am broadly interested in trustworthy, safe, and fair machine learning, and more specifically, measuring and mitigating social harms and disparities that emerge from natural language processing systems. My current research focuses on understanding how data, model, and evaluation choices impact the reliability of bias measures. 
 	      </p>
-	      <p>I completed my undergrad at Harvey Mudd College in 2018 and worked as a Data Scientist at UnifyID before starting grad school. Outside of research, I love traveling, food, music, and watching the NBA. Please reach out if you have similar interests and want to discuss ideas! 
+	      <p>I completed my undergrad at Harvey Mudd College in 2018 and worked as a Data Scientist at UnifyID before starting grad school. Outside of research, I love traveling, food, music, and watching the NBA. Please reach out if you have similar interests and want to discuss ideas! *****************************
               </p>
               <p style="text-align:center">
                 <a href="mailto:preethis@uci.edu">Email</a> &nbsp/&nbsp
