--- a/index.html
+++ b/index.html
@@ -31,6 +31,6 @@
               </p>
             </td>
             <td style="padding:2.5%;width:40%;max-width:40%">
-              <a href="images/profile.jpeg"><img style="height:60%;max-height:60%" alt="profile photo" src="images/profile.jpeg" class="hoverZoomLink"></a>
+              <a href="images/profile.jpeg"><img style="width:75%;max-width:75%" alt="profile photo" src="images/profile.jpeg" class="hoverZoomLink"></a>
             </td>
           </tr>
