--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
               </p>
               <p style="text-align:center">
                 <a href="mailto:preethis@uci.edu">Email</a> &nbsp/&nbsp
+		<a href="https://scholar.google.com/citations?user=SOYgT4kAAAAJ&hl=en">Google Scholar</a> &nbsp/&nbsp
                 <a href="https://twitter.com/Preethi__S_">Twitter</a> &nbsp/&nbsp
                 <a href="https://www.linkedin.com/in/preethi-seshadri/">LinkedIn</a>
               </p>
