--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
               <p style="text-align:center">
                 <name>Preethi Seshadri</name>
               </p>
-              <p>Welcome! My name is Preethi and I am a CS PhD student at UC Irvine working with <a href="https://www.sameersingh.org/">Sameer Singh</a>. I am broadly interested in trustworthy, safe, and fair machine learning, and more specifically, measuring and mitigating social harms and disparities that emerge from natural language processing and text-to-image systems. My current research focuses on understanding how data, model, and evaluation choices impact bias analysis and measures. 
+              <p>Welcome! My name is Preethi and I am a CS PhD student at UC Irvine working with <a href="https://www.sameersingh.org/">Sameer Singh</a>. I am broadly interested in trustworthy, safe, and fair machine learning, and more specifically, measuring and mitigating social harms and disparities that emerge from NLP and multimodal systems. My current research focuses on understanding how data, model, and evaluation choices impact bias analysis and measures. 
 	      </p>
 	      <p>I completed my undergrad at Harvey Mudd College in 2018 and worked as a Data Scientist at UnifyID before starting grad school. Outside of research, I love traveling, food, music, and watching the NBA. Please reach out if you have similar interests and want to discuss ideas!
               </p>
